--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "description": "",
+  "homepage": "https://yihanyozikua.github.io/tai_portfolio_hashtags/",
   "scripts": {
     "start": "parcel src/index.html --open",
     "clean": "rm -rf dist/*",
     "build:parcel": "parcel build src/index.html --no-content-hash --no-source-maps --public-url ./",
-    "build": "npm run clean && npm run build:parcel"
+    "build": "npm run clean && npm run build:parcel",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+    
   },
   "repository": {
     "type": "git",
@@ -16,7 +20,6 @@
   "keywords": [],
   "author": "Codrops",
   "license": "MIT",
-  "homepage": "https://tympanus.net/codrops",
   "bugs": {
     "url": "https://github.com/codrops/[NAME]/issues"
   },
@@ -25,5 +28,8 @@
     "imagesloaded": "^4.1.4",
     "parcel": "latest",
     "split-type": "^0.2.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
